<resources>
    <string name="app_name">Wanderlust</string>
    <string name="title_home">Home</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_addnewpost">Add New Post</string>
    <string name="title_maps">Maps</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="GOOGLE_API_KEY">AIzaSyAObG9an3Zp6ESK0KTy1RSn403Kw2I3c6A</string>
</resources>
