<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.wanderlust.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.example.wanderlust.ui.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" />

    <fragment
        android:id="@+id/navigation_addnewpost"
        android:name="com.example.wanderlust.ui.addnewpost.AddNewPostFragment"
        android:label="@string/title_addnewpost"
        tools:layout="@layout/fragment_addnewpost" />
    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.wanderlust.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.wanderlust.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
